tests/baselines/reference/optionalChainingInParameterBindingPattern.2(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
optionalChainingInParameterBindingPattern.2.ts(3,6): error TS2373: Parameter '{ [a()?.d]: c = "" }' cannot reference identifier 'a' declared after it.
optionalChainingInParameterBindingPattern.2.ts(6,24): error TS2373: Parameter 'd' cannot reference identifier 'x' declared after it.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== optionalChainingInParameterBindingPattern.2.ts (2 errors) ====
    // https://github.com/microsoft/TypeScript/issues/36295
    const a = (): { d: string } | undefined => undefined;
    (({ [a()?.d]: c = "" }) => { var a; })();
         ~
!!! error TS2373: Parameter '{ [a()?.d]: c = "" }' cannot reference identifier 'a' declared after it.
    
    const x = "";
    (({ [a()?.d]: c }, d = x) => { var x; })();
                           ~
!!! error TS2373: Parameter 'd' cannot reference identifier 'x' declared after it.